give each class their own loggers clear lists in ItemRandomizer removing some debug logging in LootRandomizer significant rework on RandomizationMapData log and prevent setting empty item stacks in recipes