@@ -1,6 +1,7 @@
 package com.ghzdude.randomizer;
 
-import com.google.common.collect.Lists;
+import com.ghzdude.randomizer.util.RandomizerUtil;
+import com.mojang.logging.LogUtils;
 import it.unimi.dsi.fastutil.objects.Object2ObjectMap;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import net.minecraft.core.HolderLookup;
@@ -15,11 +16,12 @@ import net.minecraft.tags.TagKey;
 import net.minecraft.util.datafix.DataFixTypes;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import net.minecraft.world.level.saveddata.SavedData;
 import net.minecraft.world.level.storage.DimensionDataStorage;
-import net.minecraftforge.registries.ForgeRegistries;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.slf4j.Logger;
 
 import java.util.List;
 import java.util.Objects;
@@ -31,8 +33,10 @@ public class RandomizationMapData extends SavedData {
 
     public static final RandomizationMapData VANILLA = new DefaultedMapData();
 
+
     private static final ResourceLocation AIR = ResourceLocation.parse("minecraft:air");
     private static final Random RNG = new Random();
+    private static final Logger LOGGER = LogUtils.getLogger();
 
     private final Object2ObjectMap<ResourceLocation, ResourceLocation> ITEM_MAP = new Object2ObjectOpenHashMap<>();
     private final Object2ObjectMap<ResourceLocation, ResourceLocation> ITEM_MAP_REVERSE = new Object2ObjectOpenHashMap<>();
@@ -40,27 +44,27 @@ public class RandomizationMapData extends SavedData {
     private final Object2ObjectMap<ResourceLocation, ResourceLocation> TAGKEY_MAP = new Object2ObjectOpenHashMap<>();
     private final Object2ObjectMap<ResourceLocation, ResourceLocation> TAGKEY_MAP_REVERSE = new Object2ObjectOpenHashMap<>();
 
-    @Nullable
-    private final Registry<Item> ITEM_REGISTRY;
+    private static Registry<Item> ITEM_REGISTRY;
 
     private boolean isLoaded = false;
 
-    public RandomizationMapData(@Nullable RegistryAccess access) {
-        ITEM_REGISTRY = access != null ? access.registryOrThrow(Registries.ITEM) : null;
-
+    public RandomizationMapData() {
         ITEM_MAP.defaultReturnValue(AIR);
         ITEM_MAP_REVERSE.defaultReturnValue(AIR);
-
         TAGKEY_MAP.defaultReturnValue(AIR);
         TAGKEY_MAP_REVERSE.defaultReturnValue(AIR);
     }
 
-    public static Factory<RandomizationMapData> factory(RegistryAccess access) {
-        return new Factory<>(() -> new RandomizationMapData(access), RandomizationMapData::load, DataFixTypes.LEVEL);
+    public static void init(RegistryAccess access) {
+        ITEM_REGISTRY = access.registryOrThrow(Registries.ITEM);
     }
 
-    public static RandomizationMapData get(DimensionDataStorage storage, RegistryAccess access, String prefix) {
-        RandomizationMapData data = storage.computeIfAbsent(RandomizationMapData.factory(access), RandomizerCore.MODID + "_" + prefix);
+    public static Factory<RandomizationMapData> factory() {
+        return new Factory<>(RandomizationMapData::new, RandomizationMapData::load, DataFixTypes.LEVEL);
+    }
+
+    public static RandomizationMapData get(DimensionDataStorage storage, String prefix) {
+        RandomizationMapData data = storage.computeIfAbsent(RandomizationMapData.factory(), RandomizerCore.MODID + "_" + prefix);
         if (!data.isLoaded()) {
             data.generateItemMap();
             data.generateTagMap();
@@ -71,7 +75,7 @@ public class RandomizationMapData extends SavedData {
     }
 
     public static RandomizationMapData get(MinecraftServer server, String prefix) {
-        return get(server.overworld().getDataStorage(), server.registryAccess(),  prefix);
+        return get(server.overworld().getDataStorage(),  prefix);
     }
 
     public static RandomizationMapData get(ServerLevel serverLevel, String prefix) {
@@ -79,12 +83,12 @@ public class RandomizationMapData extends SavedData {
     }
 
     private static boolean isAir(ResourceLocation loc) {
-        return AIR.equals(loc);
+        return AIR.equals(loc) || loc.getPath().isEmpty();
     }
 
     @Override
     public @NotNull CompoundTag save(CompoundTag tag, HolderLookup.@NotNull Provider provider) {
-        RandomizerCore.LOGGER.warn("Saving randomizations to disk!");
+        LOGGER.warn("Saving randomizations to disk!");
         CompoundTag itemMap = new CompoundTag();
         CompoundTag tagKeyMap = new CompoundTag();
 
@@ -103,27 +107,46 @@ public class RandomizationMapData extends SavedData {
         return tag;
     }
 
-    public static RandomizationMapData load(CompoundTag tag, HolderLookup.Provider provider) {
-        if (!(provider instanceof RegistryAccess access)) return VANILLA;
-        Registry<Item> itemRegistry = access.registryOrThrow(Registries.ITEM);
-        RandomizationMapData data = new RandomizationMapData(access);
-        RandomizerCore.LOGGER.warn("Loading from disk!");
+    public static RandomizationMapData load(CompoundTag tag, HolderLookup.Provider ignored) {
+        RandomizationMapData data = new RandomizationMapData();
+        LOGGER.warn("Loading from disk!");
 
         CompoundTag itemMap = tag.getCompound("item_map");
         CompoundTag tagMap = tag.getCompound("tag_key_map");
 
-        ItemRandomizer.getValidItems().forEach(item -> {
-            ResourceLocation vanilla = Objects.requireNonNull(itemRegistry.getKey(item));
-            ResourceLocation random = ResourceLocation.parse(itemMap.getString(vanilla.toString()));
-            if (isAir(random)) return;
+        for (String item : itemMap.getAllKeys()) {
+            ResourceLocation vanilla = ResourceLocation.parse(item);
+            ResourceLocation random = ResourceLocation.parse(itemMap.getString(item));
+            if (isAir(vanilla) || isAir(random)) continue;
             data.putItem(vanilla, random);
-        });
+        }
 
-        itemRegistry.getTagNames().map(TagKey::location).forEach(vanilla -> {
-            ResourceLocation rand = ResourceLocation.parse(tagMap.getString(vanilla.toString()));
-            if (isAir(rand)) return;
-            data.putTag(vanilla, rand);
-        });
+        Set<ResourceLocation> loadedKeys = data.ITEM_MAP.keySet();
+        Set<ResourceLocation> validKeys = ItemRandomizer.getKeys().collect(Collectors.toSet());
+        validKeys.removeIf(loadedKeys::contains);
+        if (!validKeys.isEmpty()) {
+            logDifference(validKeys);
+        }
+
+        for (String tagKey : tagMap.getAllKeys()) {
+            ResourceLocation vanilla = ResourceLocation.parse(tagKey);
+            ResourceLocation random = ResourceLocation.parse(tagMap.getString(tagKey));
+            if (isAir(vanilla) || isAir(random)) continue;
+            data.putTag(vanilla, random);
+        }
+
+        data.getItems().stream().filter(l -> l.equals(data.getItemFor(l)))
+                .forEach(RandomizationMapData::logMatchingKey);
+
+        loadedKeys = data.TAGKEY_MAP.keySet();
+        validKeys = ITEM_REGISTRY.getTagNames().map(TagKey::location).collect(Collectors.toSet());
+        validKeys.removeIf(loadedKeys::contains);
+        if (!validKeys.isEmpty()) {
+            logDifference(validKeys);
+        }
+
+        data.getTags().stream().filter(l -> l.equals(data.getTagKeyFor(l)))
+                .forEach(RandomizationMapData::logMatchingKey);
 
         data.setDirty();
         data.isLoaded = true;
@@ -133,40 +156,64 @@ public class RandomizationMapData extends SavedData {
 
     private void generateTagMap() {
         List<ResourceLocation> vanilla = ITEM_REGISTRY.getTagNames().map(TagKey::location).collect(Collectors.toList());
-        List<ResourceLocation> copy = Lists.newArrayList(vanilla);
 
-        for (ResourceLocation key : vanilla) {
-            int selection = RNG.nextInt(copy.size());
+        ResourceLocation key, value, tail = vanilla.get(RNG.nextInt(1, vanilla.size()));
 
-            ResourceLocation value = copy.remove(selection);
-            vanilla.remove(value);
+        while (!vanilla.isEmpty()) {
+            key = vanilla.removeFirst();
+            value = vanilla.isEmpty() ? tail : RandomizerUtil.getRandom(vanilla, RNG);
 
-            TAGKEY_MAP.put(key, value);
-            TAGKEY_MAP_REVERSE.put(value, key);
+            putTag(key, value);
         }
+
+        Set<ResourceLocation> loadedKeys = TAGKEY_MAP.keySet();
+        Set<ResourceLocation> validKeys = ITEM_REGISTRY.getTagNames().map(TagKey::location).collect(Collectors.toSet());
+        validKeys.removeIf(loadedKeys::contains);
+        if (!validKeys.isEmpty()) {
+            logDifference(validKeys);
+        }
+
+        TAGKEY_MAP.keySet().stream().filter(l -> l.equals(TAGKEY_MAP.get(l)))
+                .forEach(RandomizationMapData::logMatchingKey);
     }
 
     private void generateItemMap() {
-        List<ResourceLocation> vanilla = Lists.newArrayList(ItemRandomizer.getValidItems().stream().map(ITEM_REGISTRY::getKey).toList());
-        List<ResourceLocation> copy = Lists.newArrayList(vanilla);
+        List<ResourceLocation> vanilla = ItemRandomizer.getKeys().collect(Collectors.toList());
 
-        for (ResourceLocation key : vanilla) {
-            int selection = RNG.nextInt(copy.size());
+        ResourceLocation key, value, tail = vanilla.get(RNG.nextInt(1, vanilla.size()));
 
-            ResourceLocation value = copy.remove(selection);
-            vanilla.remove(value);
+        while (!vanilla.isEmpty()) {
+            key = vanilla.removeFirst();
+            value = vanilla.isEmpty() ? tail : RandomizerUtil.getRandom(vanilla, RNG);
 
-            ITEM_MAP.put(key, value);
-            ITEM_MAP_REVERSE.put(value, key);
+            putItem(key, value);
         }
+
+        Set<ResourceLocation> loadedKeys = ITEM_MAP.keySet();
+        Set<ResourceLocation> validKeys = ItemRandomizer.getKeys().collect(Collectors.toSet());
+        validKeys.removeIf(loadedKeys::contains);
+        if (!validKeys.isEmpty()) {
+            logDifference(validKeys);
+        }
+
+        ITEM_MAP.keySet().stream().filter(l -> l.equals(ITEM_MAP.get(l)))
+                .forEach(RandomizationMapData::logMatchingKey);
     }
 
     private void putItem(ResourceLocation vanilla, ResourceLocation random) {
+        if (isAir(vanilla) || isAir(random)) {
+            throw new IllegalArgumentException("Items cannot be air!");
+        }
         ITEM_MAP.put(vanilla, random);
+        ITEM_MAP_REVERSE.put(random, vanilla);
     }
 
     private void putTag(ResourceLocation vanilla, ResourceLocation random) {
+        if (isAir(vanilla) || isAir(random)) {
+            throw new IllegalArgumentException("Tags cannot be air!");
+        }
         TAGKEY_MAP.put(vanilla, random);
+        TAGKEY_MAP_REVERSE.put(random, vanilla);
     }
 
     public ItemStack getStackFor(ItemStack stack) {
@@ -175,7 +222,7 @@ public class RandomizationMapData extends SavedData {
 
     public ItemStack getStackFor(Item vanilla, int count) {
         Item randomItem = getItemFor(vanilla);
-        if (randomItem == null || count < 1) {
+        if (randomItem == Items.AIR || count < 1) {
             // cannot return empty
             return new ItemStack(vanilla, Math.max(count, 1));
         }
@@ -186,9 +233,18 @@ public class RandomizationMapData extends SavedData {
     }
 
     public Item getItemFor(Item item) {
-        ResourceLocation vanilla = ForgeRegistries.ITEMS.getKey(item);
-        if (vanilla == null || isAir(vanilla)) throw new IllegalArgumentException("Cannot randomize Air!");
-        return ForgeRegistries.ITEMS.getValue(ITEM_MAP.get(vanilla));
+        ResourceLocation vanilla = Objects.requireNonNull(ITEM_REGISTRY.getKey(item));
+        ResourceLocation random = getItemFor(vanilla);
+        return ITEM_REGISTRY.get(random);
+    }
+
+    public ResourceLocation getItemFor(ResourceLocation vanilla) {
+        if (isAir(vanilla)) throw new IllegalArgumentException("Cannot randomize Air!");
+        if (!ITEM_MAP.containsKey(vanilla)) {
+            LOGGER.warn("Item '{}' is not mapped to a random item!", vanilla);
+            return vanilla;
+        }
+        return ITEM_MAP.get(vanilla);
     }
 
     public ResourceLocation getOriginalItem(ResourceLocation random) {
@@ -243,10 +299,19 @@ public class RandomizationMapData extends SavedData {
         return isLoaded;
     }
 
+    private static void logDifference(Set<ResourceLocation> difference) {
+        LOGGER.warn("Not all keys were associated with a random item/tag! Usually this means I suck at randomizing!");
+        LOGGER.warn("Missed keys: {}", difference);
+    }
+
+    private static void logMatchingKey(ResourceLocation l) {
+        LOGGER.warn("The key '{}' has been mapped to itself!", l);
+    }
+
     private static class DefaultedMapData extends RandomizationMapData {
 
         public DefaultedMapData() {
-            super(null);
+            super();
         }
 
         @Override
@@ -267,6 +332,11 @@ public class RandomizationMapData extends SavedData {
         @Override
         public Item getItemFor(Item item) {
             return item;
+        }
+
+        @Override
+        public ResourceLocation getItemFor(ResourceLocation vanilla) {
+            return vanilla;
         }
 
         @Override
